# signum

./: Cargo.toml  README.md  Signum-portable.bat  USERGUIDE.md  run_signum.sh  test_complete_workflow.sk.enc  test_signing_key.sk.enc  test_user_specific.sk.enc
.github/workflows/: build.yml
src/: error.rs  lib.rs  main.rs  tracing.rs
src/application/: auth_service.rs  crypt_service.rs  key_service.rs  mod.rs  sign_service.rs  verif_service.rs
src/cli/: app.rs  build.rs  commands.rs  interactive.rs  mod.rs  mode.rs  state.rs  ui.rs
src/core/: mod.rs
src/core/crypto/: asym.rs  hash.rs  mod.rs  sym.rs
src/core/keys/: exchange.rs  mod.rs  storage.rs
src/core/verify/: verifier.rs
src/crypto/: keys_ed25519.rs  keysfiles.rs  mod.rs  signer.rs  verifier.rs
src/domain/: mod.rs  user.rs  vault.rs
src/domain/ports/: config.rs  fs.rs  mod.rs  repository.rs
src/domain/user/: entities.rs  file_path.rs  mod.rs  passwords.rs
src/infra/: file_system.rs  mod.rs  user_repo.rs
src/test/: auth_service_test.rs  config_test.rs  crypt_service_test.rs  key_service_test.rs  keys_test.rs  mod.rs  mode_test.rs  repo_test.rs  sym_test.rs  test_file_system.rs  test_user.rs
src/user/: domain.rs  mod.rs  passwords.rs
src/user/auth/: hash.rs  login.rs  mod.rs  repo.rs
